Fix HTML imagenes
se les saca / de las imagenes para que se vean

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <div class="container header-inner">
       <a href="index.html" class="logo">
-        <img src="/logo-beatles.jpg" alt="The Beatles">
+        <img src="logo-beatles.jpg" alt="The Beatles">
       </a>
 
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -45,7 +45,7 @@
         </div>
 
         <div class="celu-image">
-          <img src="/losbitles.png" alt="The Beatles">
+          <img src="losbitles.png" alt="The Beatles">
         </div>
       </div>
     </section>
@@ -63,8 +63,8 @@
           </div>
 
           <div class="about-images">
-            <img src="/please please.png" alt="">
-            <img src="/Love.png" alt="">
+            <img src="please please.png" alt="">
+            <img src="Love.png" alt="">
           </div>
         </div>
       </div>
@@ -78,25 +78,25 @@
         <div class="projects-grid">
 
           <article class="project-card">
-            <img src="/sgtpeppers.jpg" alt="Sgt Pepper">
+            <img src="sgtpeppers.jpg" alt="Sgt Pepper">
             <h3>Sgt. Pepper's Lonely Hearts Club Band</h3>
             <p>Una obra maestra psicodélica que redefinió el concepto de álbum.</p>
           </article>
 
           <article class="project-card">
-            <img src="/discoAbbeyroad.png" alt="Abbey Road">
+            <img src="discoAbbeyroad.png" alt="Abbey Road">
             <h3>Abbey Road</h3>
             <p>El sonido más pulido de la banda y una portada icónica.</p>
           </article>
 
           <article class="project-card">
-            <img src="/discoRevolver.png" alt="Revolver">
+            <img src="discoRevolver.png" alt="Revolver">
             <h3>Revolver</h3>
             <p>Experimentación, innovación y un antes y después en el estudio.</p>
           </article>
 
           <article class="project-card">
-            <img src="/discoHelp.png" alt="Help!">
+            <img src="discoHelp.png" alt="Help!">
             <h3>Help!</h3>
             <p>Una mezcla entre frescura pop y madurez musical temprana.</p>
           </article>
@@ -175,3 +175,4 @@
 
 </body>
 </html>
+
