Fix HTML imagenes quienes somos
se arreglan las imagenes

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container header-inner">
       <a href="index.html" class="logo">
-        <img src="/logo-beatles.jpg" alt="The Beatles">
+        <img src="logo-beatles.jpg" alt="The Beatles">
       </a>
 
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -39,25 +39,25 @@
         <h2>La banda</h2>
         <div class="projects-grid band-members">
           <article class="project-card">
-            <img src="/john-lennon_madison-sq.jpg" alt="">
+            <img src="john-lennon_madison-sq.jpg" alt="">
             <h3>John Lennon</h3>
             <p>Voz y guitarra rítmica. Letras profundas y visión innovadora.</p>
           </article>
 
           <article class="project-card">
-            <img src="/Paulcito.png" alt="">
+            <img src="Paulcito.png" alt="">
             <h3>Paul McCartney</h3>
             <p>Bajista, compositor y creador de melodías inmortales.</p>
           </article>
 
           <article class="project-card">
-            <img src="/George-Harrison.png" alt="">
+            <img src="George-Harrison.png" alt="">
             <h3>George Harrison</h3>
             <p>Guitarra principal e incorporador de nuevas sonoridades.</p>
           </article>
 
           <article class="project-card">
-            <img src="/ringod.png" alt="">
+            <img src="ringod.png" alt="">
             <h3>Ringo Starr</h3>
             <p>Baterista con estilo único e inconfundible.</p>
           </article>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
