Fix HTML imagenes in contacto.html
imagen de logo

--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container header-inner">
       <a href="index.html" class="logo">
-        <img src="/logo-beatles.jpg" alt="The Beatles">
+        <img src="logo-beatles.jpg" alt="The Beatles">
       </a>
 
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
