--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
 
           <article class="project-card">
             <img src="sgtpeppers.jpg" alt="Sgt Pepper">
-            <h3>Sgt. Pepper's Lonely Hearts Club Band</h3>
+            <h3>Sgt. Pepper's Lonely Hearts Club Band (1967)</h3>
             <p>Una obra maestra psicodélica que redefinió el concepto de álbum.</p>
           </article>
 
           <article class="project-card">
             <img src="discoAbbeyroad.png" alt="Abbey Road">
-            <h3>Abbey Road</h3>
+            <h3>Abbey Road (1969)</h3>
             <p>El sonido más pulido de la banda y una portada icónica.</p>
           </article>
 
           <article class="project-card">
             <img src="discoRevolver.png" alt="Revolver">
-            <h3>Revolver</h3>
+            <h3>Revolver (1966)</h3>
             <p>Experimentación, innovación y un antes y después en el estudio.</p>
           </article>
 
           <article class="project-card">
             <img src="discoHelp.png" alt="Help!">
-            <h3>Help!</h3>
+            <h3>Help! (1965)</h3>
             <p>Una mezcla entre frescura pop y madurez musical temprana.</p>
           </article>
 
@@ -175,4 +175,5 @@
 
 </body>
 </html>
+
 
