--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="celu-image">
-          <img src="losbitles.png" alt="The Beatles">
+          <img src="los4.jpg" alt="The Beatles">
         </div>
       </div>
     </section>
@@ -175,5 +175,6 @@
 
 </body>
 </html>
+
 
 
