--- a/index.html
+++ b/index.html
@@ -80,25 +80,91 @@
           <article class="project-card">
             <img src="sgtpeppers.jpg" alt="Sgt Pepper">
             <h3>Sgt. Pepper's Lonely Hearts Club Band (1967)</h3>
-            <p>Una obra maestra psicodélica que redefinió el concepto de álbum.</p>
+            <p>Es a menudo citado por la crítica como su mejor obra y el disco más importante de todos los tiempos.</p>
+            <ol>
+                <li>"Sgt. Pepper's Lonely Hearts Club Band"</li>
+                <li>"With a Little Help from My Friends"</li>
+                <li>"Lucy in the Sky with Diamonds"</li>
+                <li>"Getting Better"</li>
+                <li>"Fixing a Hole"</li>
+                <li>"She's Leaving Home"</li>
+                <li>"Being for the Benefit of Mr. Kite!"</li>
+                <li>"Within You Without You"</li>
+                <li>"When I'm Sixty-Four"</li>
+                <li>"Lovely Rita"</li>
+                <li>"Good Morning Good Morning"</li>
+                <li>"Sgt. Pepper's Lonely Hearts Club Band" (reprise)</li>
+                <li>"A Day in the Life"</li>
+            </ol>
           </article>
 
           <article class="project-card">
             <img src="discoAbbeyroad.png" alt="Abbey Road">
             <h3>Abbey Road (1969)</h3>
-            <p>El sonido más pulido de la banda y una portada icónica.</p>
+            <p>Está considerado como uno de los álbumes más importantes en la historia de la música y el mejor elaborado por The Beatles</p>
+            <ol>
+                <li>«Come Together»</li>
+                <li>«Something»</li>
+                <li>«Maxwell's Silver Hammer»</li>
+                <li>«Oh! Darling»</li>
+                <li>«Octopus's Garden»</li>
+                <li>«I Want You (She's So Heavy)»</li>
+                <li>«Here Comes the Sun»</li>
+                <li>«Because»</li>
+                <li>«You Never Give Me Your Money»</li>
+                <li>«Sun King»</li>
+                <li>«Mean Mr. Mustard»</li>
+                <li>«Polythene Pam»</li>
+                <li>«She Came In Through the Bathroom Window»</li>
+                <li>«Golden Slumbers»</li>
+                <li>«Carry That Weight»</li>
+                <li>«The End»</li>
+                <li>«Her Majesty»</li>
+            </ol>
           </article>
 
           <article class="project-card">
             <img src="discoRevolver.png" alt="Revolver">
             <h3>Revolver (1966)</h3>
-            <p>Experimentación, innovación y un antes y después en el estudio.</p>
+            <p>Fue el último álbum lanzado antes de que la banda decidiera abandonar los escenarios y las giras</p>
+            <ol>
+              <li>«Taxman»</li>
+              <li>«Eleanor Rigby»</li>
+              <li>«I'm Only Sleeping»</li>
+              <li>«Love You To»</li>
+              <li>«Here, There and Everywhere»</li>
+              <li>«Yellow Submarine»</li>
+              <li>«She Said She Said»</li>
+              <li>«Good Day Sunshine»</li>
+              <li>«And Your Bird Can Sing»</li>
+              <li>«For No One»</li>
+              <li>«Doctor Robert»</li>
+              <li>«I Want to Tell You»</li>
+              <li>«Got to Get You into My Life»</li>
+              <li>«Tomorrow Never Knows»</li>
+          </ol>
           </article>
 
           <article class="project-card">
             <img src="discoHelp.png" alt="Help!">
             <h3>Help! (1965)</h3>
-            <p>Una mezcla entre frescura pop y madurez musical temprana.</p>
+            <p>Una mezcla entre frescura pop y madurez musical temprana.Al mismo tiempo es la banda sonora de su película de mismo nombre</p>
+            <ol>
+                <li>«Help!»</li>
+                <li>«The Night Before»</li>
+                <li>«You've Got to Hide Your Love Away»</li>
+                <li>«I Need You»</li>
+                <li>«Another Girl»</li>
+                <li>«You're Going to Lose That Girl»</li>
+                <li>«Ticket to Ride»</li>
+                <li>«Act Naturally»</li>
+                <li>«It's Only Love»</li>
+                <li>«You Like Me Too Much»</li>
+                <li>«Tell Me What You See»</li>
+                <li>«I've Just Seen a Face»</li>
+                <li>«Yesterday»</li>
+                <li>«Dizzy Miss Lizzy»</li>
+            </ol>
           </article>
 
         </div>
@@ -175,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
