--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="celu-image">
-          <img src="los4.jpg" alt="The Beatles">
+          <img src="losbitles.png" alt="The Beatles">
         </div>
       </div>
     </section>
@@ -79,22 +79,23 @@
 
           <article class="project-card">
             <img src="sgtpeppers.jpg" alt="Sgt Pepper">
-            <h3>Sgt. Pepper's Lonely Hearts Club Band (1967)</h3>
-            <p>Es a menudo citado por la crítica como su mejor obra y el disco más importante de todos los tiempos.</p>
+            <h3>Rubber Soul (1965)</h3>
+            <p>Fue descrito como un logro artístico importante de la banda, teniendo un amplio éxito comercial y de crítica</p>
             <ol>
-                <li>"Sgt. Pepper's Lonely Hearts Club Band"</li>
-                <li>"With a Little Help from My Friends"</li>
-                <li>"Lucy in the Sky with Diamonds"</li>
-                <li>"Getting Better"</li>
-                <li>"Fixing a Hole"</li>
-                <li>"She's Leaving Home"</li>
-                <li>"Being for the Benefit of Mr. Kite!"</li>
-                <li>"Within You Without You"</li>
-                <li>"When I'm Sixty-Four"</li>
-                <li>"Lovely Rita"</li>
-                <li>"Good Morning Good Morning"</li>
-                <li>"Sgt. Pepper's Lonely Hearts Club Band" (reprise)</li>
-                <li>"A Day in the Life"</li>
+                <li>«Drive My Car»</li>
+                <li>«Norwegian Wood (This Bird Has Flown)»</li>
+                <li>«You Won't See Me»</li>
+                <li>«Nowhere Man»</li>
+                <li>«Think for Yourself»</li>
+                <li>«The Word»</li>
+                <li>«Michelle»</li>
+                <li>«What Goes On»</li>
+                <li>«Girl»</li>
+                <li>«I'm Looking Through You»</li>
+                <li>«In My Life»</li>
+                <li>«Wait»</li>
+                <li>«If I Needed Someone»</li>
+                <li>«Run for Your Life»</li>
             </ol>
           </article>
 
@@ -241,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
