--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -39,25 +39,25 @@
         <h2>La banda</h2>
         <div class="projects-grid band-members">
           <article class="project-card">
-            <img src="john-lennon_madison-sq.jpg" alt="">
+            <img src="johnl.jpg" alt="john lennon">
             <h3>John Lennon</h3>
             <p>Voz y guitarra rítmica. Letras profundas y visión innovadora.</p>
           </article>
 
           <article class="project-card">
-            <img src="Paulcito.png" alt="">
+            <img src="paulm.jpg" alt="paul mccartney">
             <h3>Paul McCartney</h3>
             <p>Bajista, compositor y creador de melodías inmortales.</p>
           </article>
 
           <article class="project-card">
-            <img src="George-Harrison.png" alt="">
+            <img src="georgeh.jpg" alt="george harrison">
             <h3>George Harrison</h3>
             <p>Guitarra principal e incorporador de nuevas sonoridades.</p>
           </article>
 
           <article class="project-card">
-            <img src="ringod.png" alt="">
+            <img src="ringos.jpg" alt="ringo starr">
             <h3>Ringo Starr</h3>
             <p>Baterista con estilo único e inconfundible.</p>
           </article>
@@ -76,4 +76,5 @@
 
 </body>
 </html>
+
 
