Update Article discos
Se añade rubber soul imagen del disco

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="projects-grid">
 
           <article class="project-card">
-            <img src="sgtpeppers.jpg" alt="Sgt Pepper">
+            <img src="Rubber_soul.PNG" alt="Sgt Pepper">
             <h3>Rubber Soul (1965)</h3>
             <p>Fue descrito como un logro artístico importante de la banda, teniendo un amplio éxito comercial y de crítica</p>
             <ol>
@@ -242,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
